# malackathon

./: Database.sql  README.md  home  list  list_2
backend/: Cargo.toml  readme.md
backend/src/: main.rs  models.rs  routes.rs  services.rs
docs/: guion.md  presentacion.md
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/.svelte-kit/: ambient.d.ts
frontend/src/: app.css
frontend/src/lib/components/: Card.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/contact/: +page.svelte
frontend/src/routes/listPage/: +layout.svelte  +page.svelte  +page.ts  Header.svelte
